ejercicios basicos html listos

--- a/exercises/03-hello-without-head/index.html
+++ b/exercises/03-hello-without-head/index.html
@@ -1,2 +1,7 @@
-<!-- your code below here -->
-<p>Hello, you have to delete everything and add what the instructions specify instead</p>
+<!DOCTYPE html>
+<html>
+	<head>
+		<h1>Andrea</h1>
+	</head>
+	<body></body>
+</html>
