--- a/exercises/10-replicate-html/index.html
+++ b/exercises/10-replicate-html/index.html
@@ -4,6 +4,22 @@
 		<title>4Geeks Academy</title>
 	</head>
 	<body>
-        <!-- your code here -->
+		<!-- your code here -->
+		<h1>The learning essay</h1>
+		<h2>3 reasons you know you are learning</h2>
+		<h4>We are going to explain in this pharegraph the 3 most comon signs you should look into yourself to recognize if you are learning.</h4>
+		<ol>
+			<li>You are able ...</li>
+			<li>You understand ...</li>
+			<li>You are able ...</li>
+		</ol>
+
+		<h2>3 reasons you know love you are learning</h2>
+		<ul>
+			<li>Time passes fast.</li>
+			<li>You understand ...</li>
+			<li>Is 12am ...</li>
+		</ul>
+		<h4>If you can't sleep, what better ...</h4>
 	</body>
 </html>
