--- a/exercises/12-my-first-table/index.html
+++ b/exercises/12-my-first-table/index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>4Geeks Academy</title>
-</head>
-<body>
-<!-- your code here -->
-</body>
+	<head>
+		<title>4Geeks Academy</title>
+	</head>
+	<body>
+		<!-- your code here -->
+		<table border="1" style="width:100%">
+			<tr height="40" bgcolor="red">
+				<th>Name</th>
+				<th>Lastname</th>
+				<th>Phone Number</th>
+			</tr>
+			<tr>
+				<td>Justin</td>
+				<td>Priveta</td>
+				<td>346</td>
+			</tr>
+			<tr>
+				<td>Jacob</td>
+				<td>Prieto</td>
+				<td>(345)234</td>
+			</tr>
+			<tr>
+				<td>James</td>
+				<td>Mc.Dinzk</td>
+				<td>+(234)455</td>
+			</tr>
+		</table>
+	</body>
 </html>
