--- a/exercises/13-image-with-text/index.html
+++ b/exercises/13-image-with-text/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>4Geeks Academy</title>
-</head>
-<body>
-<!-- your code here -->
-</body>
+	<head>
+		<title>4Geeks Academy</title>
+	</head>
+	<body>
+		<!-- your code here -->
+		<table border="0" tyle="width:100%">
+			<tr>
+				<td><img src="https://i.blogs.es/5efe2c/cap_001/450_1000.jpg" height="150" /></td>
+				<td valign="top">
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste consequuntur eaque, animi ipsam tempore nostrum adipisci nesciunt
+					sint id consequatur dolore. Reprehenderit aliquam facere iure illum, nobis cupiditate ducimus corporis.
+				</td>
+			</tr>
+		</table>
+	</body>
 </html>
