--- a/.breathecode/resets/07-anchor-same-page/index.html
+++ b/.breathecode/resets/07-anchor-same-page/index.html
@@ -4,9 +4,8 @@
 		<title>4Geeks Academy</title>
 	</head>
 	<body>
-		<h2 id="top">This is the upper side of the website</h2>
+		<h2>This is the upper side of the website</h2>
 		<!-- your first anchor here -->
-		<a href="#abajo">Abajo</a>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
@@ -34,8 +33,7 @@
 		<p>&nbsp;</p>
 
 		<!-- your second anchor here -->
-		<a href="#top">Arriba</a>
 		<a>Hello</a>
-		<h2 id="abajo">This is the lower side of the website</h2>
+		<h2>This is the lower side of the website</h2>
 	</body>
 </html>
