--- a/exercises/14-video-tag/index.html
+++ b/exercises/14-video-tag/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
+	<head>
+		<title>4Geeks Academy</title>
+	</head>
+	<body style="margin:0;">
+		<!-- your code here -->
 
-<title>4Geeks Academy</title>
-</head>
-<body style="margin:0;">
-	<!-- your code here -->
-</body>
+		<video width="100%" height="100%" autoplay>
+			<source src="https://assets.breatheco.de/apis/video/why-pair-programming" type="video/mp4" />
+		</video>
+	</body>
 </html>
